# envfuse-CLI

./: Cargo.toml  README.md  install.sh
.github/workflows/: release.yml
src/: cli.rs  main.rs
src/commands/: export.rs  get.rs  import.rs  init.rs  list.rs  load.rs  mod.rs  remove.rs  run.rs  set.rs
src/utils/: crypto.rs  vault.rs
