[package]
name = "envseal"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4", features = ["derive"] }
argon2 = "0.5"
aes-gcm = { version = "0.11.0", features = ["getrandom"] }
rand = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
directories = "6.0.0"
rpassword = "7"
anyhow = "1"
base64 = "0.22.1"
zeroize = "1"
rand_core = "0.10.1"
aead = "0.6.1"
dotenvy = "0.15.7"
dialoguer = "0.12.0"
